# microservice-in-nestjs

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.e2e-spec.ts  docker-compose.yml  eslint.config.mjs  jest-e2e.json  nest-cli.json  package-lock.json  package.json  tsconfig.json  upload-test.ts
.github/workflows/: staging-CICD.yml
dockerfile/scripts/: entrypoint.sh
dockerfile/supervisor/: start.conf
files/scripts/: entrypoint.sh
files/supervisor/: pdf-service.conf  start.conf
nginx/: nginx.conf
public/js/: scripts.js
public/stylesheet/: main.css
rust/: Cargo.toml  README.md  build.rs
rust/src/: parse_pdf.rs  server.rs
scripts/: entrypoint.sh
src/: app.module.ts  main.ts
src/app/: app.controller.ts  app.module.ts
src/app/Models/: User.ts
src/app/exceptions/: global-server-exception.filter.ts
src/app/guards/: api.guard.ts  check-origin.guard.ts  ensure-email-verified.guard.ts  ensure-has-dealership.guard.ts  ensure-profile-completed.guard.ts  ensure-token-valid.guard.ts  guards.module.ts
src/config/: app.ts  database.ts  filesystems.ts  mail.ts  oauth.ts  permission.ts  permissions.ts  services.ts  session.ts  sms.ts  twilio.ts
src/database/: create-migration.ts  driver.ts
src/database/migrations/: 1747753896458-AddUserTable.ts  1747753992331-asdgsdg.ts  1750855815188-add_new_colum_to_vehicle_vin.ts
src/database/seeders/: databaseSeeder.ts  permissionSeeder.ts  (+1 more)
src/grpc/: grpc.module.ts
src/types/: express.d.ts
src/utils/: config.ts  docs-auth.middleware.ts
test/unit/: app.e2e-spec.ts
views/: index.hbs
(+265 files in other folders)
