[package]
name = "worker"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = "0.12.3"
prost = "0.13.5"
tokio = { version = "1.44.0", features = ["full"] }
tokio-stream = "0.1.17"
reqwest = "0.12.22"
lopdf = "0.36.0"
pdf-extract = "0.9.0"


[build-dependencies]
tonic-build = "0.12.3"

[[bin]]
name = "server"
path = "src/server.rs"
